--- a/app/globals.css
+++ b/app/globals.css
@@ -1,11 +1,11 @@
 :root {
   --background: #ffffff;
-  --foreground: #171717;
+  --foreground: #000000;
 }
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #f5f0e1;
-    --foreground: #ededed;
+    --background: #ffffff;
+    --foreground: #000000;
   }
 }
 
