--- a/app/globals.css
+++ b/app/globals.css
@@ -4,8 +4,8 @@
 }
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #ffffff;
-    --foreground: #000000;
+    --background: #291f32;
+    --foreground: #1b1b1b;
   }
 }
 
