--- a/app/styles/components/header.scss
+++ b/app/styles/components/header.scss
@@ -1,11 +1,26 @@
+$box-shadow: -3px -3px 7px rgba(
+      $color: #efcfc5,
+      $alpha: 0.1,
+    ),
+  3px 3px 5px
+    rgba(
+      $color: #291f32,
+      $alpha: 0.7,
+    );
+
 .navbar {
+  position: fixed;
+  width: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 10px 20px;
-  background-color: #333;
+  background-color: #1b1b1b;
   color: white;
   .logo {
+    padding: 10px;
+    text-align: center;
+    border-radius: 50px;
     font-size: 1.5rem;
     font-weight: bold;
   }
@@ -16,26 +31,75 @@
       list-style-type: none;
     }
     a {
-      color: white;
-      text-decoration: none;
+      font-size: 14px;
       padding: 8px 16px;
-      transition: background-color 0.3s;
+      color: #888888;
+      border-radius: 10px;
+      background-color: #1b1b1b;
+      text-decoration: none;
+      transition: 0.3s;
     }
-    :hover {
-      background-color: #555;
+    a:hover {
+      color: #ffffff;
+      box-shadow: $box-shadow;
+    }
+    .selected {
+      color: #ffffff;
+      box-shadow: $box-shadow;
     }
   }
   .search-bar {
+    width: 100%;
+    display: flex;
+    justify-content: center;
     input {
-      padding: 5px;
-      font-size: 1rem;
+      width: 25%;
+      min-width: 170px;
+      padding: 10px;
+      font-size: 14px;
       border: none;
       border-radius: 5px;
       background-color: #444;
-      color: white;
+      color: #888888;
+      transition: 0.3s;
     }
-    ::placeholder {
+    input::placeholder {
       color: #bbb;
+    }
+    input:focus {
+      box-shadow: $box-shadow;
+      outline: none;
+    }
+  }
+  .deactivated {
+    display: none;
+  }
+  .menu-toggle {
+    display: none;
+  }
+}
+
+@media (max-width: 768px) {
+  .navbar {
+    .nav-links {
+      display: none;
+      flex-direction: column;
+      gap: 10px;
+      width: 100%;
+      a {
+        padding: 10px 20px;
+        text-align: center;
+      }
+    }
+    .active {
+      display: flex;
+    }
+    .menu-toggle {
+      display: block;
+      font-size: 2rem;
+      background: none;
+      border: none;
+      color: white;
     }
   }
 }
