--- a/app/styles/index.scss
+++ b/app/styles/index.scss
@@ -1,9 +1,9 @@
-@import url("./components/header.scss");
-@import url("./components/sidebar.scss");
-@import url("./components/articleCard.scss");
-@import url("./components/welcomeSign.scss");
-@import url("./pages/post.scss");
-@import url("./pages/posts.scss");
+@import "./components/header.scss";
+@import "./components/sidebar.scss";
+@import "./components/articleCard.scss";
+@import "./components/welcomeSign.scss";
+@import "./pages/post.scss";
+@import "./pages/posts.scss";
 
 main {
   display: flex;
