--- a/app/styles/components/header.scss
+++ b/app/styles/components/header.scss
@@ -17,6 +17,7 @@ $box-shadow: -3px -3px 7px rgba(
   padding: 10px 20px;
   background-color: #1b1b1b;
   color: white;
+  z-index: 1000;
   .logo {
     padding: 10px;
     text-align: center;
