--- a/app/styles/pages/posts.scss
+++ b/app/styles/pages/posts.scss
@@ -44,6 +44,6 @@
 
 .post-meta {
   font-size: 0.9rem;
-  color: #edae9d; /* Color para meta información */
+  color: #291f32; /* Color para meta información */
   margin-top: 0.5rem;
 }
