--- a/app/styles/components/articleCard.scss
+++ b/app/styles/components/articleCard.scss
@@ -9,19 +9,39 @@ $box-shadow: -3px -3px 7px rgba(
     );
 
 .article-card {
-  border-radius: 10px;
+  border-radius: 25px;
   padding: 35px;
   display: flex;
-  height: 100%;
+  min-height: 250px;
+  height: fit-content;
   flex-direction: column;
+  justify-content: space-between;
   box-shadow: $box-shadow;
-  transition: 0.5s;
-  margin-bottom: 20px;
   background-color: #f9f9f9;
   .article-title {
     font-size: 24px;
+    margin-bottom: 20px;
   }
-}
-.article-card:hover {
-  cursor: pointer;
+  .article-information {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    font-weight: bold;
+  }
+  .read-more-container {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    .chevron-right {
+      align-self: flex-end;
+      border-radius: 100%;
+      width: 40px;
+      height: auto;
+      padding: 10px;
+      transition: 0.3s;
+    }
+    .chevron-right:hover {
+      background-color: #efcac2;
+    }
+  }
 }
