--- a/app/styles/index.scss
+++ b/app/styles/index.scss
@@ -2,25 +2,30 @@
 @import "./components/sidebar.scss";
 @import "./components/articleCard.scss";
 @import "./components/welcomeSign.scss";
+@import "./components/navigationDown.scss";
+@import "./components/navigationBack.scss";
 @import "./pages/post.scss";
 @import "./pages/posts.scss";
 
 main {
   display: flex;
   flex-direction: column;
-  width: 70%;
-  align-self: center;
+  overflow: hidden;
+  .recent-posts-container {
+    width: 70%;
+    align-self: center;
+  }
   .home-title {
     color: #f9f9f9;
     font-size: 30px;
-    margin: 60px 0px;
+    margin: 100px 0px;
   }
   .articles-list {
     display: grid;
     grid-template-columns: auto auto auto;
     gap: 20px;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     margin-top: 20px;
     margin-bottom: 20px;
   }
