--- a/app/styles/components/postCard.scss
+++ b/app/styles/components/postCard.scss
@@ -1,3 +1,4 @@
+@import "../variables.scss";
 $box-shadow: -3px -3px 7px rgba(
       $color: #ffffff,
       $alpha: 0.07,
@@ -8,7 +9,7 @@ $box-shadow: -3px -3px 7px rgba(
       $alpha: 0.5,
     );
 
-.article-card {
+.post-card {
   border-radius: 25px;
   padding: 35px;
   display: flex;
@@ -18,21 +19,28 @@ $box-shadow: -3px -3px 7px rgba(
   justify-content: space-between;
   box-shadow: $box-shadow;
   background-color: #f9f9f9;
-  .article-title {
+  .post-title {
+    color: $secondary;
     font-size: 24px;
-    margin-bottom: 20px;
+    margin-bottom: 35px;
   }
-  .article-information {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    font-weight: bold;
+  .post-resume {
+    color: $text-black;
+    font-size: 16px;
+    line-height: 1.2;
+    margin-bottom: 35px;
   }
 
   .read-more-container {
     display: flex;
-    flex-direction: column;
-    align-items: flex-end;
+    flex-direction: row;
+    justify-content: space-between;
+    .post-information {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      font-weight: bold;
+    }
     .chevron-right {
       align-self: flex-end;
       border-radius: 100%;
@@ -42,7 +50,7 @@ $box-shadow: -3px -3px 7px rgba(
       transition: 0.3s;
     }
     .chevron-right:hover {
-      background-color: #efcac2;
+      background-color: $tertiary;
     }
   }
 }
