--- a/app/styles/components/welcomeSign.scss
+++ b/app/styles/components/welcomeSign.scss
@@ -16,6 +16,7 @@
         letter-spacing: -3px;
       }
       .subtitle {
+        min-width: 750px;
         font-size: 24px;
         letter-spacing: 3px;
         font-style: italic;
