--- a/app/styles/pages/post.scss
+++ b/app/styles/pages/post.scss
@@ -8,15 +8,18 @@
 }
 
 /* Estilo del título */
-.post-title {
+h1 {
   font-size: 2.5rem;
   font-weight: bold;
   margin-bottom: 0.5rem;
+  line-height: 1.2;
   color: #333;
 }
 
 /* Información del autor y fecha */
 .post-meta {
+  display: flex;
+  justify-content: space-between;
   font-size: 0.9rem;
   color: #777;
   margin-bottom: 2rem;
