--- a/app/styles/index.scss
+++ b/app/styles/index.scss
@@ -4,6 +4,7 @@
 @import "./components/welcomeSign.scss";
 @import "./components/navigationDown.scss";
 @import "./components/navigationBack.scss";
+@import "./components/footer.scss";
 @import "./pages/post.scss";
 @import "./pages/posts.scss";
 @import "./variables.scss";
