--- a/app/styles/components/postCard.scss
+++ b/app/styles/components/postCard.scss
@@ -13,8 +13,7 @@ $box-shadow: -3px -3px 7px rgba(
   border-radius: 25px;
   padding: 35px;
   display: flex;
-  min-height: 400px;
-  height: fit-content;
+  height: 450px;
   flex-direction: column;
   justify-content: space-between;
   box-shadow: $box-shadow;
