--- a/app/styles/pages/posts.scss
+++ b/app/styles/pages/posts.scss
@@ -21,7 +21,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  min-height: 400px;
+  height: 500px;
   padding: 35px;
   border-radius: 20px;
   background-color: $snow;
