--- a/app/styles/components/header.scss
+++ b/app/styles/components/header.scss
@@ -32,6 +32,7 @@ $box-shadow: -3px -3px 7px rgba(
   .nav-links {
     display: flex;
     justify-content: flex-end;
+    flex-direction: row;
     width: 33%;
     gap: 20px;
     li {
@@ -77,51 +78,103 @@ $box-shadow: -3px -3px 7px rgba(
       }
     }
   }
-  .search-bar {
-    width: 33%;
-    display: flex;
-    justify-content: center;
-    input {
-      width: 100%;
-      min-width: 170px;
-      padding: 10px;
-      font-size: 14px;
-      border: none;
-      border-radius: 5px;
-      background-color: #444;
-      color: #888888;
-      transition: 0.3s;
-    }
-    input::placeholder {
-      color: #bbb;
-    }
-    input:focus {
-      box-shadow: $box-shadow;
-      outline: none;
-    }
+}
+.search-bar {
+  width: 33%;
+  display: flex;
+  justify-content: center;
+  input {
+    width: 100%;
+    min-width: 170px;
+    padding: 10px;
+    font-size: 14px;
+    border: none;
+    border-radius: 5px;
+    background-color: #444;
+    color: #888888;
+    transition: 0.3s;
   }
-  .deactivated {
-    display: none;
+  input::placeholder {
+    color: #bbb;
   }
-  .menu-toggle {
-    display: none;
+  input:focus {
+    box-shadow: $box-shadow;
+    outline: none;
   }
+}
+.deactivated {
+  display: none;
+}
+.menu-toggle {
+  display: none;
 }
 
 @media (max-width: 768px) {
   .navbar {
+    .logo {
+      width: fit-content;
+      z-index: 1001;
+    }
+    .search-bar {
+      width: 50%;
+    }
     .nav-links {
       display: none;
       flex-direction: column;
       gap: 10px;
-      width: 100%;
+      width: 100vw;
+      height: 100vh;
+      background-color: #1b1b1b;
+      position: fixed;
+      top: 0;
+      left: 0;
+      justify-content: center;
+      align-items: center;
       a {
         padding: 10px 20px;
         text-align: center;
       }
     }
     .active {
+      position: absolute;
       display: flex;
+      width: 100%;
+      justify-content: center;
+      gap: 0;
+      li {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        padding: 20px 0;
+        margin: 10px 0;
+        background: none;
+        border: none;
+        &:hover {
+          background: none;
+        }
+        a {
+          font-size: 24px;
+        }
+      }
+      .language-selector {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        padding: 20px 0;
+        margin: 10px 0;
+        gap: 10px;
+        .language-label {
+          width: fit-content;
+          font-size: 24px;
+        }
+        .language-button {
+          svg {
+            width: 36px;
+            height: 36px;
+          }
+        }
+      }
     }
     .menu-toggle {
       display: block;
@@ -129,6 +182,7 @@ $box-shadow: -3px -3px 7px rgba(
       background: none;
       border: none;
       color: white;
+      z-index: 1001;
     }
   }
 }
