--- a/app/styles/components/navigationDown.scss
+++ b/app/styles/components/navigationDown.scss
@@ -8,7 +8,13 @@
     background-color: #f9f9f9;
     object-fit: cover;
     padding: 10px;
-    width: 40px;
-    height: 40px;
+    width: 50px;
+    height: 50px;
+  }
+}
+
+@media (max-width: 1024px) {
+  .chevron-container {
+    bottom: 100px;
   }
 }
