--- a/app/styles/components/welcomeSign.scss
+++ b/app/styles/components/welcomeSign.scss
@@ -1,4 +1,5 @@
 .welcome-container {
+  display: flex;
   height: calc(100vh - 70px);
   user-select: none;
   .info-content {
@@ -8,9 +9,8 @@
     width: 100%;
     flex-direction: row;
     justify-content: space-around;
-    margin-top: 55px;
     div {
-      margin-top: 15%;
+      align-self: center;
       .title {
         font-size: 96px;
         letter-spacing: -3px;
@@ -23,7 +23,6 @@
       }
     }
     .image {
-      margin-top: 100px;
       width: auto;
       height: 500px;
       z-index: -10;
@@ -38,5 +37,28 @@
     left: 0;
     overflow: hidden;
     z-index: -1000;
+  }
+}
+
+@media (max-width: 1024px) {
+  .welcome-container {
+    justify-content: center;
+    .info-content {
+      div {
+        min-width: 100%;
+        text-align: center;
+        margin-bottom: 150px;
+        .title {
+          font-size: 64px;
+        }
+        .subtitle {
+          font-size: 18px;
+          min-width: 100%;
+        }
+      }
+      .image {
+        display: none;
+      }
+    }
   }
 }
