--- a/app/styles/index.scss
+++ b/app/styles/index.scss
@@ -37,3 +37,20 @@ main {
   display: flex;
   justify-content: center;
 }
+
+@media (max-width: 1024px) {
+  main {
+    .recent-posts-container {
+      width: 90%;
+    }
+    .home-title {
+      margin-top: 80px;
+      font-size: 24px;
+      text-align: center;
+    }
+    .posts-list {
+      grid-template-columns: auto;
+      gap: 10px;
+    }
+  }
+}
