--- a/app/styles/components/welcomeSign.scss
+++ b/app/styles/components/welcomeSign.scss
@@ -48,6 +48,7 @@
         min-width: 100%;
         text-align: center;
         margin-bottom: 150px;
+        padding: 0 20px;
         .title {
           font-size: 64px;
         }
