--- a/app/styles/components/footer.scss
+++ b/app/styles/components/footer.scss
@@ -1,5 +1,5 @@
 .footer {
-  background-color: #f8f9fa;
+  background-color: #1b1b1b;
   padding: 2rem 0;
   margin-top: 4rem;
   &-content {
@@ -14,7 +14,7 @@
     gap: 1.5rem;
     margin-bottom: 1rem;
     a {
-      color: #333;
+      color: $grey;
       transition: color 0.2s;
     }
     a:hover {
@@ -22,7 +22,7 @@
     }
   }
   &-info {
-    color: #666;
+    color: $snow;
     font-size: 0.9rem;
     p {
       margin: 0.5rem 0;
