--- a/app/styles/pages/post.scss
+++ b/app/styles/pages/post.scss
@@ -18,19 +18,35 @@
 
 .post-meta {
   display: flex;
-  justify-content: flex-end;
+  justify-content: space-between;
   gap: 2rem;
   margin-bottom: 2rem;
   color: $text-black;
   font-size: 0.9rem;
   flex-wrap: wrap;
-
-  .author,
-  .date {
-    padding: 0.5rem 1rem;
-    border-radius: 50px;
-    font-weight: 500;
-    width: fit-content;
+  .post-meta-info {
+    display: flex;
+    gap: 10px;
+    .author,
+    .date {
+      display: flex;
+      gap: 10px;
+      align-items: center;
+      .author-image {
+        width: 20px;
+        height: 20px;
+        border-radius: 50%;
+      }
+      .calendar-svg {
+        width: 20px;
+        height: 20px;
+        align-self: center;
+      }
+      padding: 0.5rem 1rem;
+      border-radius: 50px;
+      font-weight: 500;
+      width: fit-content;
+    }
   }
 }
 
@@ -76,7 +92,6 @@
 
   code {
     background-color: $grey;
-    padding: 0.2rem 0.4rem;
     border-radius: 4px;
     font-size: 0.9em;
     word-break: break-all;
@@ -137,14 +152,19 @@
 
   .post-meta {
     flex-direction: row;
-    justify-content: flex-end;
-    align-items: flex-end;
+    justify-content: space-between;
+    align-items: center;
     padding: 10px;
-    .author,
-    .date {
-      padding: 0.4rem 0.8rem;
-      font-size: 0.8rem;
-      align-self: flex-end;
+    .post-meta-info {
+      display: flex;
+      flex-direction: row;
+      gap: 10px;
+      .author,
+      .date {
+        padding: 0;
+        font-size: 0.8rem;
+        align-self: flex-end;
+      }
     }
   }
 
@@ -175,7 +195,6 @@
     pre,
     code {
       font-size: 0.8rem;
-      padding: 0.3rem;
     }
 
     ul,
