--- a/app/styles/pages/posts.scss
+++ b/app/styles/pages/posts.scss
@@ -21,7 +21,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  height: 500px;
+  height: fit-content;
   padding: 35px;
   border-radius: 20px;
   background-color: $snow;
@@ -32,9 +32,26 @@
     font-size: 1.5rem;
   }
   .post-resume {
-    padding: 35px 0;
+    padding: 15px 0;
     color: $text-black;
     font-size: 1rem;
+  }
+  .post-meta-container {
+    display: flex;
+    gap: 10px;
+    justify-content: space-between;
+    align-items: center;
+    .post-meta {
+      font-size: 12px;
+    }
+    .post-category {
+      background-color: $secondary;
+      color: $snow;
+      padding: 5px 10px;
+      border-radius: 10px;
+      width: fit-content;
+      font-size: 12px;
+    }
   }
 }
 .no-posts-found {
