--- a/app/styles/pages/posts.scss
+++ b/app/styles/pages/posts.scss
@@ -12,16 +12,17 @@
 
 .posts-list {
   display: grid;
-  grid-template-columns: auto auto auto;
-  gap: 30px;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 15px;
   margin-top: 20px;
+  width: 100%;
 }
 
 .post-item {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  height: fit-content;
+  height: 100%;
   padding: 35px;
   border-radius: 20px;
   background-color: $snow;
