--- a/app/styles/pages/posts.scss
+++ b/app/styles/pages/posts.scss
@@ -12,7 +12,7 @@
 
 .posts-list {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: auto auto auto;
   grid-gap: 15px;
   margin-top: 20px;
   width: 100%;
@@ -89,7 +89,7 @@
   .posts-list {
     grid-template-columns: auto;
     .post-item {
-      height: 300px;
+      height: fit-content;
       padding: 15px;
       h2 {
         font-size: 18px;
