--- a/app/styles/pages/posts.scss
+++ b/app/styles/pages/posts.scss
@@ -1,7 +1,8 @@
 .posts-container {
+  margin-top: 70px;
   max-width: 1000px;
   padding: 2rem;
-  background-color: #291f32;
+  background-color: #070707;
   color: #f9f9f9;
   border-radius: 8px;
   h1 {
