--- a/app/styles/variables.scss
+++ b/app/styles/variables.scss
@@ -1,7 +1,7 @@
 /* SCSS HEX */
-$russian-violet: #291f32;
+$russian-violet: #070707;
 $celtic-blue: #266dd3ff;
-$tropical-indigo: #8c81ebff;
+$tropical-indigo: #255447ff;
 $french-gray: #ced3dcff;
 $snow: #fcf7f8ff;
 
