--- a/app/styles/components/welcomeSign.scss
+++ b/app/styles/components/welcomeSign.scss
@@ -1,6 +1,6 @@
 .welcome-container {
   display: flex;
-  height: calc(100vh - 70px);
+  height: 100vh;
   user-select: none;
   .info-content {
     position: absolute;
@@ -8,31 +8,36 @@
     align-self: center;
     width: 100%;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: center;
     div {
       align-self: center;
+      background-color: rgba(0, 0, 0, 0.5);
+      backdrop-filter: blur(10px);
+      padding: 20px;
+      border-radius: 10px;
+      margin: 20px;
+      align-items: center;
+      text-align: center;
       .title {
         font-size: 96px;
         letter-spacing: -3px;
+        color: $white;
       }
       .subtitle {
+        color: $white;
+
         min-width: 750px;
         font-size: 24px;
         letter-spacing: 3px;
         font-style: italic;
       }
     }
-    .image {
-      width: auto;
-      height: 500px;
-      z-index: -10;
-    }
   }
 
   .image-wallpaper {
     width: 100vw;
     object-fit: cover;
-    height: calc(100vh - 70px);
+    height: 100%;
     position: absolute;
     left: 0;
     overflow: hidden;
@@ -45,10 +50,8 @@
     justify-content: center;
     .info-content {
       div {
-        min-width: 100%;
         text-align: center;
         margin-bottom: 150px;
-        padding: 0 20px;
         .title {
           font-size: 64px;
         }
@@ -56,9 +59,6 @@
           font-size: 18px;
           min-width: 100%;
         }
-      }
-      .image {
-        display: none;
       }
     }
   }
