fix some styles

--- a/app/styles/components/postCard.scss
+++ b/app/styles/components/postCard.scss
@@ -45,6 +45,7 @@ $box-shadow: -3px -3px 7px rgba(
         background-color: $secondary;
         color: $text-white;
         padding: 5px 10px;
+        margin-top: 15px;
         border-radius: 10px;
       }
     }
