--- a/app/styles/components/header.scss
+++ b/app/styles/components/header.scss
@@ -119,7 +119,7 @@ $box-shadow: -3px -3px 7px rgba(
       gap: 10px;
       width: 100vw;
       height: 100vh;
-      background-color: #1b1b1b;
+
       position: fixed;
       top: 0;
       left: 0;
@@ -134,6 +134,7 @@ $box-shadow: -3px -3px 7px rgba(
       position: absolute;
       display: flex;
       width: 100%;
+      background-color: rgba(0, 0, 0, 1);
       justify-content: center;
       gap: 0;
       li {
