--- a/app/styles/components/sidebar.scss
+++ b/app/styles/components/sidebar.scss
@@ -9,7 +9,7 @@
   .title {
     color: #ffffff;
     text-align: center;
-    line-height: 50px;
+    line-height: 1.2;
     font-size: 25px;
     letter-spacing: 2px;
   }
@@ -18,7 +18,7 @@
     width: 100%;
     a {
       padding-left: 10px;
-      line-height: 40px;
+      line-height: 1.4;
       font-size: 14px;
       display: block;
       transition: 0.2s;
@@ -28,7 +28,7 @@
     }
     .sub-category {
       display: none;
-      line-height: 30px;
+      line-height: 1.4;
       font-size: 14px;
       padding-left: 30px;
     }
