--- a/app/styles/components/footer.scss
+++ b/app/styles/components/footer.scss
@@ -1,3 +1,5 @@
+@use "../variables";
+
 .footer {
   background-color: #1b1b1b;
   padding: 2rem 0;
@@ -14,7 +16,7 @@
     gap: 1.5rem;
     margin-bottom: 1rem;
     a {
-      color: $grey;
+      color: variables.$grey;
       transition: color 0.2s;
     }
     a:hover {
@@ -22,7 +24,7 @@
     }
   }
   &-info {
-    color: $snow;
+    color: variables.$snow;
     font-size: 0.9rem;
     p {
       margin: 0.5rem 0;
